Cleanup and exception handling code added.

--- a/src/main/resources/templates/connected.html
+++ b/src/main/resources/templates/connected.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Check iof cities are connected.</title>
+    <title>Check if cities are connected.</title>
 </head>
 <body>
 <h2><th:block th:text="${isConnected}">isConnected</h2>
